[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "egbelem"
version = "0.0.1"
dependencies = [
    "landlab",
    "numpy",
]

[project.optional-dependencies]
examples = [
    "notebook",
    "pyvista[jupyter]",
]

[tool.setuptools]
package-dir = { "" = "src" }
